infra/k8s/genaigithub-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genaigithub
  namespace: genaigithub
spec:
  replicas: 3
  selector:
    matchLabels:
      app: genaigithub
  template:
    metadata:
      labels:
        app: genaigithub
    spec:
      containers:
      - name: pr-reviewer-api
        image: jrvlima/pr-reviewer-api:latest-amd64
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: postgres-cert
          mountPath: /etc/postgres/certs
          readOnly: true
        ports:
          - containerPort: 8000
        resources:
          limits:
            memory: "256Mi"  # Maximum memory allowed
            cpu: "200m"       # Maximum CPU allowed (200 milliCPU)
          requests:
            memory: "128Mi"  # Initial memory request
            cpu: "100m"       # Initial CPU request     
      volumes:
      - name: postgres-cert
        configMap:
          name: postgres-ca-cert
