infra/k8s/genaigithub-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: genaigithub-ingress
  namespace: genaigithub
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - pr-analyzer-api.k8s.zeecode.io
      secretName: genaigithub-certificate-tls
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: genaigithub
            port:
              number: 8000
